computational requirements updated

--- a/final_report_patrec_project/main.tex
+++ b/final_report_patrec_project/main.tex
@@ -143,6 +143,8 @@ We used the free resources provided in Google Colab for this reproduction, and s
 
 Regarding the extension with metacognitive evaluation of the CoT method, and the updated plan module which contains rating all of the three methods for their suitability to be used for each specific problem, the calculations with the DeepSeek model were more computationally expensive. The free resources of Google Colab (T4 GPU) were also used for the extension. The code for the metacognitive evaluation was executed in `minibatches' of 10 samples. The metacognitive evaluation module needed 17 minutes for each minibatch. The updated plan module was executed in batches of 100 samples, where each batch needed approximately 1 hour. Therefore, the code for the extension needed 50.56 hours in total to be executed.
 
+Regarding the extension with testing the Tree-of-Thoughts prompting technique in the XoT framework, the running time for generating the ToT results was around 6 hours for each batch of 100 samples. Additionally, the metacognitive evaluation of the ToT results was around 17 minutes, using T4 GPU, for each minibatch, of 10 samples. We also used RTX-4090 GPU for 50 of these batches, to speed up the running process, which resulted in 5 minutes running time for each minibatch. Consequently, the code for the second extension needed around 105.4 hours in total to be executed.
+
 \section{Extensions}
 Considering the constraints and future research directions highlighted, we proceeded to expand upon the original publication. Specifically, inspired by the work of \citet{wang2023metacognitive}, which introduces the concept of metacognitive prompting, we integrated the methodology of metacognitive evaluation to appraise the generated outputs, and we incorporated the CoT method into the plan module, as in the original paper, the plan module is called upon to choose between the PoT and EoT methods, resulting in it never initiating with CoT.
 
