report tot update

--- a/final_report_patrec_project/main.bib
+++ b/final_report_patrec_project/main.bib
@@ -72,3 +72,13 @@ publisher={MIT Press}
   journal = {arXiv preprint arXiv:2308.05342},
   year    = {2023}
 }
+
+@misc{yao2023tree,
+  title         = {{Tree of Thoughts: Deliberate Problem Solving with Large Language Models}},
+  author        = {Shunyu Yao and Dian Yu and Jeffrey Zhao and Izhak Shafran and Thomas L. Griffiths and Yuan Cao and Karthik Narasimhan},
+  year          = {2023},
+  eprint        = {2305.10601},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL},
+  note          = {arXiv:2305.10601 [cs.CL]}
+}
