tot results without metacognitive

--- a/final_report_patrec_project/main.tex
+++ b/final_report_patrec_project/main.tex
@@ -257,7 +257,7 @@ Also, from the confusion matrices regarding the metacognitive evaluation for the
 Regarding the extension with the ToT prompting technique, the results without metacognitive evaluation can be seen in Table \ref{extension2-results-without-meta}, and the results with metacognitive evaluation can be seen in the Table \ref{extension2-results-with-meta} and the Figure \ref{fig:cm-metacognitive-tot}.
 
 \begin{table}[t]
-  \caption{Results replacing CoT with ToT prompting technique, without ToT metacognitive evaluation.}
+  \caption{Results replacing CoT with ToT prompting technique, with the original plan module and without ToT metacognitive evaluation.}
   \label{extension2-results-without-meta}
   \begin{center}
   \begin{tabular}{lll}
