--- a/final_report_patrec_project/main.bib
+++ b/final_report_patrec_project/main.bib
@@ -82,3 +82,13 @@ publisher={MIT Press}
   primaryclass  = {cs.CL},
   note          = {arXiv:2305.10601 [cs.CL]}
 }
+
+@misc{pandit2023tree,
+  author       = {Pandit, Shrey},
+  title        = {{Tree of Thought on GSM8K}},
+  year         = {2023},
+  publisher    = {GitHub},
+  journal      = {GitHub repository},
+  howpublished = {URL: \url{https://github.com/ShreyPandit/Tree-of-thought-on-GSM8K}},
+  commit       = {The specific commit if relevant}
+}
