--- a/final_report_patrec_project/main.tex
+++ b/final_report_patrec_project/main.tex
@@ -165,7 +165,7 @@ We specifically instructed the LLM to rate the suitability of each method for so
 
 \subsection{Incorporation of ToT into the XoT framework}
 
-In order to incorporate the Tree-of-Thoughts method into the XoT framework, we needed to adapt the prompts for the GSM8K dataset. The prompts that were used are based on the work of \cite{pandit2023tree}, and they encourage the LLM to think about the solution of the problem in small steps. We instructed the LLM to solve the problem in 4 steps at most. After every step that the LLM generates, we prompt it to give from 1 to 3 alternatives for the next step of the solution to the problem, thereby creating a tree of depth 3, where each node, except the leaf nodes, has 3 child nodes.
+In order to incorporate the Tree-of-Thoughts method into the XoT framework, we needed to adapt the prompts for the GSM8K dataset. The prompts that were used are based on the work of \cite{pandit2023tree} and they encourage the LLM to think about the solution of the problem in small steps. We instructed the LLM to solve the problem in 4 steps at most. After every step that the LLM generates, we prompt it to give from 1 to 3 alternatives for the next step of the solution to the problem, thereby creating a tree of depth 3, where each node, except the leaf nodes, has no more than 3 child nodes. The best alternative option is selected at each step and it is based on the current steps taken so far towards solving the corresponding problem.
 
 Additionally, we tested, with the same prompts as in the previous extension, the metacognitive evaluation for the ToT module. Specifically, the module for ToT metacognitive evaluation evaluates the suitability of the ToT solution by examining only the highest scoring path in the tree, which also represents the solution selected by the ToT module.
 
@@ -342,7 +342,7 @@ Examples showing the changes made in the prompts can be found in the Appendix in
 \bibliography{main}
 \bibliographystyle{tmlr}
 
-
+  
 \appendix
 \section{Appendix}
 \label{appen}
@@ -464,6 +464,56 @@ We have included the prompts of each module with some example inputs and outputs
         \end{table}
 
         \begin{table}[t]
+          \caption{Example of ToT reasoning.}
+          \label{tab:tot-reasoning}
+          \begin{center}
+          \begin{tabular}{|p{0.96\linewidth}|}
+          \hline
+          \underline{Input:}\\
+          Imagine you are trying to solve a math problem with a step-by-step approach. At each step, you should propose a single next step to solve the problem involving a single arithmetic option. If there are multiple options for how to proceed, you should generate up to 3 options.\\
+
+          The format of the problem is as below, follow this format only \\
+          Input: XXXX \\
+          Steps taken so far: YYYY \\
+          Output: ZZZZ\\
+
+          NOTE: The options should not be sequential or connected with each other, each option should be in a way that it can be evaluated independently. Dont jump to the result directly.
+          IMPORTANT: MAKE SURE NOT TO HAVE THE DIRECT ANSWER IN YOUR POSSIBLE STEPS OUTPUT, JUST MAKE ONE STEP AT A TIME. \\ \\
+          Q: Jasper will serve charcuterie at his dinner party. He buys 2 pounds of cheddar cheese for \$10, a pound of cream cheese that cost half the price of the cheddar cheese, and a pack of cold cuts that cost twice the price of the cheddar cheese. How much does he spend on the ingredients?\\
+          Steps take so far: [Calculate the price of cheddar cheese which is \$10 (given)] \\
+          Output: Possible independent steps:\\
+          1) Calculate the price of cold cuts which is 2*10 = \$20.\\
+          2)Calculate the price of cream cheese which is 10/2 = \$5 per pound. <END> \\ \\
+          Q: Weng earns \$12 an hour for babysitting. Yesterday, she just did 50 minutes of babysitting. How much did she earn?\\
+          Steps taken so far: [None] \\
+          Output: Possible next steps:\\
+          1) Convert the minutes of babysitting to hours. \\
+          2) Convert the wage per hour to wage per minute. <END> \\ \\
+          Q: James writes a 3-page letter to 2 different friends twice a week. How many pages does he write a year?\\
+          Steps taken so far: [Number of letter written to 1 friend in a week = 2 as he writes twice a week] \\
+          Output: Possible next steps:\\
+          1) Number of letter written to 2 friends in a week = 2*2 = 4 letters a week.\\
+          2) Calculate the number of pages written to 1 friend in a week = 2*3 = 6 pages. <END> \\ \\
+          Q: Last year there were 50 students enrolled in a calligraphy class. This year, there was a 20\% increase in enrollment. How many students are enrolled this year in the calligraphy class? \\
+          Steps taken so far: \\
+          Output: Possible next steps: \\
+          \hline
+          \underline{First step output:} \\
+          Steps taken so far: [None] \\
+          Output: Possible next steps:\\
+          1) Calculate the increase in enrollment. \\
+          2) Calculate the number of students enrolled this year.\\
+          \hline
+
+          \hline
+          \underline{The final solution path:} \\
+          ( "Calculate the increase in enrollment.", "Calculate the number of students enrolled this year.", "Calculate the increase in enrollment = 50*20/100 = 10 students.", "Calculate the number of students enrolled this year = 50 + 10 = 60 students." )\\
+          \hline
+          \end{tabular}
+          \end{center}
+          \end{table}
+
+        \begin{table}[t]
           \caption{Example of metacognitive evaluation.}
           \label{tab:metacognitive-eval-prompt}
           \begin{center}
@@ -542,3 +592,4 @@ We have included the prompts of each module with some example inputs and outputs
   
 
 \end{document}
+
