--- a/final_report_patrec_project/main.tex
+++ b/final_report_patrec_project/main.tex
@@ -143,7 +143,7 @@ We used the free resources provided in Google Colab for this reproduction, and s
 
 Regarding the extension with metacognitive evaluation of the CoT method, and the updated plan module which contains rating all of the three methods for their suitability to be used for each specific problem, the calculations with the DeepSeek model were more computationally expensive. The free resources of Google Colab (T4 GPU) were also used for the extension. The code for the metacognitive evaluation was executed in `minibatches' of 10 samples. The metacognitive evaluation module needed 17 minutes for each minibatch. The updated plan module was executed in batches of 100 samples, where each batch needed approximately 1 hour. Therefore, the code for the extension needed 50.56 hours in total to be executed.
 
-Regarding the extension with testing the Tree-of-Thoughts prompting technique in the XoT framework, the running time for generating the ToT results was around 6 hours for each batch of 100 samples. Additionally, the metacognitive evaluation of the ToT results was around 17 minutes, using T4 GPU, for each minibatch of 10 samples. We also used RTX-4090 GPU for 50 of these minibatches, in order to speed up the running process. This faster GPU cost \$0.47 per hour and led to 6 minutes running time for each minibatch. Consequently, the code for the second extension needed around 105.7 hours in total to be executed, and cost \$2.32.
+Regarding the extension with testing the Tree-of-Thoughts prompting technique in the XoT framework, the running time for generating the ToT results was around 6 hours for each batch of 100 samples. Additionally, the metacognitive evaluation of the ToT results was around 17 minutes, using T4 GPU, for each minibatch of 10 samples. We also used RTX 4090 GPU for 50 of these minibatches, in order to speed up the running process. This faster GPU cost \$0.47 per hour and led to 6 minutes running time for each minibatch. Consequently, the code for the second extension needed around 105.7 hours in total to be executed, and cost \$2.32.
 
 \section{Extensions}
 Considering the constraints and future research directions highlighted, we proceeded to expand upon the original publication. Specifically, inspired by the work of \citet{wang2023metacognitive}, which introduces the concept of metacognitive prompting, we integrated the methodology of metacognitive evaluation to appraise the generated outputs, and we incorporated the CoT method into the plan module, as in the original paper, the plan module is called upon to choose between the PoT and EoT methods, resulting in it never initiating with CoT.
@@ -556,7 +556,7 @@ We have included the prompts of each module with some example inputs and outputs
             \begin{tabular}{|p{0.96\linewidth}|}
             \hline
             \underline{Input:}\\
-            You are an expert in math reasoning. please rate the probability of successfully solving this problem using each of the following methods: \\
+            You are an expert in math reasoning. Please rate the probability of successfully solving this problem using each of the following methods: \\
             - Python Program: This method generates a Python program that can solve the given question. It takes in the question and possible context and produces a program. Normally, we consider using this method when the questions and contexts involve forward reasoning, such as arithmetic operations over multiple numbers, or when the questions involve complex logical operations, such as "if-else" statements. \\
             - System of linear equations: This method builds a math model and generates a system of linear equations that contains the answer as an unknown variable. Normally, we consider using this method when the questions and contexts involve an unknown variable that must be used to build an equation, especially when the question can be better modeled with abstract mathematical declarations, or when the unknown variable appears at the beginning of the questions and needs backward reasoning to solve it. \\
             - Chain of Thought: This method involves breaking down the question into a series of logical steps or considerations, almost like a narrative or a conversation with oneself. It's typically used when the problem requires multi-step reasoning, where each step builds upon the previous one. The method is particularly useful for complex problems that don't lend themselves to straightforward computational or algorithmic solutions. Instead of directly arriving at the answer, the chain of thought method involves articulating each step of the thought process, providing clarity and justification for each decision or inference made along the way. This approach is ideal for problems where the reasoning path is as important as the final answer, such as in puzzles, riddles, or scenarios with multiple variables and possible interpretations. \\
